<resources>
    <string name="app_name">My Application</string>
    <string name="guest_user">GUEST USER</string>
    <string name="image">image</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="guest">GUEST</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="textview">TextView</string>
    <string name="guestpage">guestPage</string>
    <string name="guestimage">GuestImage</string>
    <string name="content">content</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_to_stock_money">Welcome to Stock Money!</string>
    <string name="an_easy_to_use_online_stock_market_prediction_application_just_search_the_company_below_and_we_will_tell_you_the_prediction_value_of_that_company_in_the_near_future">An easy to use online stock market prediction application just search the company below and we will tell you the prediction value of that company in the near future</string>
    <string name="guestimageamge" />
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="hi">Hi!</string>
    <string name="stock">Stock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prediction">Prediction</string>

    <string name="website">Website</string>
    <string name="industry">industry</string>
    <string name="employee">Employee</string>
    <string name="discription">Discription</string>
    <string name="prediction_details">Prediction Details</string>
    <string name="_1st_day">1st Day</string>
    <string name="_2nd_day">2nd Day</string>
    <string name="_3rd_day">3rd Day</string>
    <string name="_4th_day">4th Day</string>
    <string name="_5th_day">5th Day</string>
</resources>