<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignUp"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="407dp"
            android:layout_height="427dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image"
            android:scaleType="fitStart"
            android:src="@drawable/image2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/montserratregular"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_edittext_signup"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Enter Name"
            android:ems="10"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserratregular"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/email_edittext_signup"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Enter Email"
            android:ems="10"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserratregular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext_signup" />

        <EditText
            android:id="@+id/phonenumber_edittext_signup"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Enter Phone Number"
            android:ems="10"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserratregular"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_signup" />

        <EditText
            android:id="@+id/password_edittext_signup"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Enter Password"
            android:ems="10"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserratregular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phonenumber_edittext_signup" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="317dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/signupbutton"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_signup"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button"
            android:layout_width="203dp"
            android:layout_height="29dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/forgot_button"
            android:fontFamily="@font/seguisym"
            android:freezesText="false"
            android:onClick="openLogin"
            android:text="@string/already_have_account"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.786"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_button"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="OnClick" />
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
