<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="always">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Guest">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="374dp"
            android:background="@drawable/rectangle"
            android:contentDescription="@string/guestpage"
            android:scaleType="fitEnd"
            android:src="@drawable/maskgroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="96dp"
            android:layout_marginTop="136dp"
            android:background="@drawable/white"
            android:scaleType="centerInside"
            android:src="@drawable/user"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="432dp"
            android:layout_height="319dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_chainStyle="spread"
            app:srcCompat="@drawable/about" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="336dp"
            android:layout_height="62dp"
            android:fontFamily="@font/montserratbold"
            android:paddingLeft="10dp"
            android:text="@string/welcome_to_stock_money"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="326dp"
            android:layout_height="180dp"
            android:layout_marginBottom="44dp"
            android:fontFamily="@font/montserratregular"
            android:paddingLeft="10dp"
            android:text="@string/an_easy_to_use_online_stock_market_prediction_application_just_search_the_company_below_and_we_will_tell_you_the_prediction_value_of_that_company_in_the_near_future"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="335dp"
            android:layout_height="62dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/guest_search_button"
            android:drawableRight="@drawable/ic_baseline_search_24"
            android:drawablePadding="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.188" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
